[package]
name = "jh-rs"
version = "0.1.0"
authors = ["DaanA32 <daan32@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "JH hash implementation in pure rust"
repository = "https://github.com/DaanA32/jh-rs"
keywords = ["hash"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
jh-ffi = "0.5.0"
rand = "0.8.3"